# clovers

./: .gitignore  README.md  a.py  docs.py  pyproject copy.toml  pyproject.toml  test.py
clovers/: __init__.py  adapter.py  base.py  clovers.py  config.py  core copy.py  core.py  logger.py  plugin.py  protocol.py  tools.py  typing.py  utils.py
clovers/adapter/: adapter.py  utils.py
clovers/core/: __init__.py  adapter.py  client.py  core.py  loader.py  logger.py  plugin.py  protocol.py  utils.py
clovers/utils/: linecard.py
clovers_apscheduler/: __init__.py
clovers_core/: adapter.py  config.py  plugin.py  utils.py
clovers_leafgame/: __init__.py  account.py  clover.py  config.py  item.py  library.py  main.py  manager.py  output.py  plugin.py  test.py
clovers_leafgame/core/: account.py  clovers.py  config.py  data.py  linecard.py  manager.py  utils.py
clovers_leafgame/item/: __init__.py  prop.py  props_library.json
clovers_leafgame/prop/: __init__.py  (+1 more)
clovers_leafgame_core/: clovers.py  data.py
clovers_leafgame_core copy/: data.py  utils.py
clovers_leafgame_core1/: data.py  game.py  manager.py
clovers_leafgame_market/: __init__.py  config.py
clovers_leafgame_plugin_prop/: __init__.py  library.py  output.py
clovers_leafgame_prop/: __init__.py  config.py  library.py  output.py  props_library.json
clovers_leafgame_ranklist/: __init__.py  output.py  utils.py
clovers_utils/: library.py  linecard.py  tools.py
core/: plugin.py
extra/: test.py
nonebot_plugin_clovers/: __init__.py
tools/: create_prop.py  data_update.py
utils/: tools.py
(+39 files in other folders)
