[project]
name = "clovers"
version = "0.5.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["toml (>=0.10.2,<0.11.0)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.group.dev.dependencies]
pydoc-markdown = "^4.8.2"

[tool.pydoc-markdown]

[dependency-groups]
dev = ["pydoc-markdown>=4.8.2"]
