[project]
name = "clovers"
version = "0.5.1"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["toml (>=0.10.2,<0.11.0)"]

[dependency-groups]
dev = ["pydoc-markdown>=4.8.2"]

[tool.setuptools.packages.find]
include = ["clovers"]
